tests/negative/neg_pr1112a_multi_shared.safe
package neg_pr1112a_multi_shared

   type settings is record
      value : integer

   shared left, right : settings = (value = 1)
